Corrección estética de algunas lineas en contactos y el Type en apellido

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -40,17 +40,16 @@
                 </div>
                 <div>
                     <label for="apellido">Apellido</label>
-                    <input type="apellido" name="apellido" placeholder="Ingresa tu apellido" required>
+                    <input id="text" name="apellido" placeholder="Ingresa tu apellido" required>
                 </div>
                 <div>
                     <label for="email">Email</label>
-                    <input email="Email" name="email" placeholder="Ingresa tu Email" required>
+                    <input email="email" name="email" placeholder="Ingresa tu Email" required>
                 </div>
                 <div>
                     <label for="mensaje"></label>
                     <textarea name="mensaje" id="" cols="30" rows="10" placeholder="Dejanos tu mensaje:"></textarea>
 
-                </div>
                 </div>
                 <div>
                     <label for="opciones"></label>
