--- a/pages/prueba.html
+++ b/pages/prueba.html
@@ -5,12 +5,59 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bangkok Barbería</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
     </style>
 </head>
 <body>
+    <div class="container">
+        <h1>Título Principal</h1>
+        <p>Aquí va el contenido en un container, el tamaño será tanto pixel como el dispositivo</p>
+    </div>
+    <div class="container-fluid">
+        <p>Aquí va el contenido en un container fluid, el tamaño será siempre 100% del ancho de la pantalla</p>
     
+    </div>
+    <section class="bg-coral container">
+
+        <h2>Noticias</h2>
+                                <!--    FORMA PARA HACER COLUMNAS, HAY QUE SUMAR 12 COLUMNAS, -->
+        <div class="row">
+            <article class="col-12 col-md-6 col-xl-3">
+                    <h3>Noticia 1</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero blanditiis,
+                         voluptates nulla autem laudantium quae quidem consequatur officiis, ea facer
+                         e impedit neque molestias beatae eius. Debitis, error voluptas. Aperiam, repellat!
+                    </p>
+            </article>
+            <article class="col-12 col-md-6 col-xl-3">
+                    <h3>Noticia 2</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam quaerat perferendis porro natus facilis culpa deleniti optio nobis reprehenderit illo.
+                     Voluptatem necessitatibus iste itaque aspernatur non, corrupti ipsa alias error!
+                    </p>
+            </article>
+            <article class="col-12 col-xl-3">
+                    <h3>Noticia 3</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero blanditiis,
+                     voluptates nulla autem laudantium quae quidem consequatur officiis, ea facer
+                     e impedit neque molestias beatae eius. Debitis, error voluptas. Aperiam, repellat!
+                    </p>
+            </article>
+            <article class="col-12 col-xl-3">
+                    <h3>Noticia 4</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam quaerat perferendis porro natus facilis culpa deleniti optio nobis reprehenderit illo.
+                 Voluptatem necessitatibus iste itaque aspernatur non, corrupti ipsa alias error!
+                    </p>
+            </article>
+        </div>
+
+
+    </section>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+
 </body>
 </html>
