--- a/pages/sobre_nosotros.html
+++ b/pages/sobre_nosotros.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bangkok Barbería</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
@@ -29,16 +30,19 @@
         </nav>
     </header>
     <main>
-        <H1 class="slogan font">SOBRE NOSOTROS</H1>
-        <p class="font centro">Bienvenido a nuestra Barbería.</p>
-        <p class="font centro">Desde 2019 nos especializamos en ofrcer el mejor servicio y marcar tendencia, póngase en contacto con nosotros para obtener más detalles sobre nuestros productos y servicios. Cita recomendada. Esperamos contar con su presencia.
-        </p>
-        <p class="font centro">Te aseguramos que cuando asistas vas a tener: 
-            <p class="font slogan">La mejor experiencia.</p> 
-            <p class="font slogan">A nuestro personal siempre presente en resolver tus dudas.</p>
-            <p class="font slogan">Un ambiente cómodo y seguro.
-        </p>
-        <div> </div>
+        <section class="container">
+            <div class="row">
+        <h1 class="slogan">SOBRE NOSOTROS</h1>
+                    <p class="font centro">Bienvenido a nuestra Barbería.</p>
+                    <p class="font centro col-8">Desde 2019 nos especializamos en ofrecer el mejor servicio y marcar tendencia, póngase en contacto con nosotros para obtener más detalles sobre nuestros productos y servicios. Cita recomendada. Esperamos contar con su presencia.
+                </p>
+                <p class="font centro">Te aseguramos que cuando asistas vas a tener: 
+                    <p class="font slogan">La mejor experiencia.</p> 
+                    <p class="font slogan">A nuestro personal siempre presente en resolver tus dudas.</p>
+                    <p class="font slogan">Un ambiente cómodo y seguro.
+                </p>
+            </div>
+        </section>
         <p class="slogan font">Encontranos en Costa Rica 4177, CABA</p>
         <iframe class="centro bordes2" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.4988169493345!2d-58.423776684475385!3d-34.591545980462705!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc73644b8cdf02eb1!2zMzTCsDM1JzI5LjYiUyA1OMKwMjUnMTcuNyJX!5e0!3m2!1ses-419!2sar!4v1646674298946!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </main>
@@ -50,6 +54,7 @@
             </p>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
 </body>
 </html>
