Puse las img en minusculas

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 
                 <img class="foto-inicio3 foto-inicio2" src="img/inicio.png" alt="">
 
-                <img class="foto-inicio2" src="img/_FOT4490.jpg" alt="">
+                <img class="foto-inicio2" src="img/inicio4.jpg" alt="">
 
-                <img class="foto-inicio2" src="img/_FOT4721.jpg" alt="">
+                <img class="foto-inicio2" src="img/inicio3.jpg" alt="">
                 
-                <img class="foto-inicio2" src="img/_SMP5058-Editar.jpg" alt="">
+                <img class="foto-inicio2" src="img/inicio2.jpg" alt="">
                 
-                <img class="foto-inicio2" src="img/_SMP5175-Editar-2-Editar-Editar-2.jpg" alt="">
+                <img class="foto-inicio2" src="img/inicio1.jpg" alt="">
             </div>
         </section>    
     </main>
