scss, bootstrap, al hacer click en logo, vas al inicio

--- a/pages/tendencias.html
+++ b/pages/tendencias.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bangkok Barbería</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
@@ -17,9 +18,9 @@
         <div class="header-title">
             <h1>Bangkok Barberia RESPONSIVE</h1>
         </div>
-        <div class="logo">    
+        <a href="../index.html" class="logo">    
             <img class="foto-logo" src="../img/logo.png" alt="">
-        </div>
+        </a>
         <nav class="header-nav">
             <ul class="header-list">
                 <li><a class="list-items links" href="../index.html">Inicio</a></li>
@@ -31,12 +32,12 @@
         </nav>
     </header>
 
-    <main>
-        <h1 class="slogan font">TENDENCIAS 2022</h1>
-        <div class="slogan font">High Fade</div>
-        <img class="padding centro bordes2 fade" src="../img/tendencia1.jpg" alt="High Fade">
-        <div class="slogan font">Taper Fade</div>
-        <img class="padding bordes2 centro fade" src="../img/tendencia2.jpg" alt="Taper Fade">
+    <main class="container">
+        <h1 class="slogan font row centro">TENDENCIAS 2022</h1>
+            <div class="slogan font col-12">High Fade</div>
+            <img class="padding  bordes2 centro w-50 " src="../img/tendencia1.jpg" alt="High Fade">
+            <div class="slogan font col-12">Taper Fade</div>
+            <img class="padding bordes2 w-50 centro  " src="../img/tendencia2.jpg" alt="Taper Fade">
     </main>
     <footer>
         <div>
@@ -46,6 +47,7 @@
             </p>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
 </body>
 
