--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <div class="header-title">
             <h1>Bangkok Barberia RESPONSIVE</h1>
         </div>
-        <div class="logo">    
-            <img class="foto-logo" src="img/logo.png" alt="">
-        </div>
+        <a href="../index.html" class="logo">    
+            <img class="foto-logo" src="../img/logo.png" alt="">
+        </a>
         <nav class="header-nav">
             <ul class="header-list">
                 <li><a class="list-items links" href="./index.html">Inicio</a></li>
