--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bangkok Barbería</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
@@ -14,12 +15,14 @@
 
 <body>
     <header class="header">
+        
         <div class="header-title">
             <h1>Bangkok Barberia RESPONSIVE</h1>
         </div>
-        <div class="logo">    
+
+        <a href="../index.html" class="logo">    
             <img class="foto-logo" src="../img/logo.png" alt="">
-        </div>
+        </a>
         <nav class="header-nav">
             <ul class="header-list">
                 <li><a class="list-items links" href="../index.html">Inicio</a></li>
@@ -88,6 +91,7 @@
             </p>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
 </body>
 
