--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -34,7 +34,7 @@
         </nav>
     </header>
     <main>
-        <H1 class="slogan font">CONTACTO</H1>
+        <H1 class="font slogan">CONTACTO</H1>
         <section class="formulario slogan2 font">
             <form class="form" action="#" method="post" enctype="application/x-www-form-urlencoded">
                 <div>
