--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="header-title">
             <h1>Bangkok Barberia RESPONSIVE</h1>
         </div>
-        <a href="../index.html" class="logo">    
+        <a href="pages/prueba.html" class="logo">    
             <img class="foto-logo" src="../img/logo.png" alt="">
         </a>
         <nav class="header-nav">
