movidificacion en la navbar, en servicios.html

--- a/pages/tendencias.html
+++ b/pages/tendencias.html
@@ -35,10 +35,18 @@
     
     <main class="container">
         <h1 class="slogan font row centro">TENDENCIAS 2023</h1>
-            <div class="slogan font col-12">High Fade</div>
-            <img class="padding  bordes2 centro w-50 " src="../img/tendencia1.jpg" alt="High Fade">
-            <div class="slogan font col-12">Taper Fade</div>
-            <img class="padding bordes2 w-50 centro  " src="../img/tendencia2.jpg" alt="Taper Fade">
+        <div class="container text-center">
+            <div class="row align-items-start">
+            <div class="col-6">
+                High Fade 
+                <img class="padding bordes2 centro w-50 " src="../img/tendencia1.jpg" alt="High Fade">
+            </div>
+            <div class="col-6">
+                Taper Fade
+                <img class="padding bordes2 w-50 centro img-fluid " src="../img/tendencia2.jpg" alt="Taper Fade">
+            </div>
+            </div>
+            </div>
     </main>
     <footer>
         <div>
