--- a/index.html
+++ b/index.html
@@ -24,7 +24,18 @@
             <ul class="header-list">
                 <li><a class="list-items links" href="./index.html">Inicio</a></li>
                 <li><a class="list-items links" href="pages/sobre_nosotros.html">Sobre Nosotros</a></li>
-                <li><a class="list-items links" href="pages/tendencias.html">Tendencias</a></li>
+                <li>
+                    <a class="list-items links nav-item dropdown nav-link dropdown-toggle" href="pages/tendencias.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Tendencias</a>
+                        
+                      </a>
+                      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="#">Tendencias 2021</a></li>
+                        <li><a class="dropdown-item" href="#">Tendencias 2022</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="pages/tendencias.html">Tendencias 2023</a></li>
+                      </ul>
+                
+                </li>
                 <li><a class="list-items links" href="pages/servicios.html">Servicios</a></li>
                 <li><a class="list-items links" href="pages/contacto.html">Contacto</a></li>
             </ul>
