Modificaciones en servicios

--- a/pages/sobre_nosotros.html
+++ b/pages/sobre_nosotros.html
@@ -16,7 +16,7 @@
         <div class="header-title">
             <h1>Bangkok Barberia RESPONSIVE</h1>
         </div>
-        <a href="pages/prueba.html" class="logo">    
+        <a href="/index.html" class="logo">    
             <img class="foto-logo" src="../img/logo.png" alt="">
         </a>
         <nav class="header-nav">
@@ -41,16 +41,16 @@
         </nav>
     </header>
     <main>
-        <section class="container">
+        <section class="container font">
             <div class="row">
                 <h1 class="slogan">SOBRE NOSOTROS</h1>
-                    <p class="font centro">Bienvenido a nuestra Barbería.</p>
-                    <p class="font centro col-8">Desde 2019 nos especializamos en ofrecer el mejor servicio y marcar tendencia, póngase en contacto con nosotros para obtener más detalles sobre nuestros productos y servicios. Cita recomendada. Esperamos contar con su presencia.
+                    <p class=" centro">Bienvenido a nuestra Barbería.</p>
+                    <p class=" centro col-8">Desde 2019 nos especializamos en ofrecer el mejor servicio y marcar tendencia, póngase en contacto con nosotros para obtener más detalles sobre nuestros productos y servicios. Cita recomendada. Esperamos contar con su presencia.
                 </p>
-                <p class="font centro">Te aseguramos que cuando asistas vas a tener: 
-                    <p class="font slogan">La mejor experiencia.</p> 
-                    <p class="font slogan">A nuestro personal siempre presente en resolver tus dudas.</p>
-                    <p class="font slogan">Un ambiente cómodo y seguro.
+                <p class="centro slogan">Te aseguramos que cuando asistas vas a tener: 
+                    <p class=" centro">La mejor experiencia.</p> 
+                    <p class=" centro">A nuestro personal siempre presente en resolver tus dudas.</p>
+                    <p class=" centro">Un ambiente cómodo y seguro.
                 </p>
             </div>
         </section>
