--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -17,7 +17,7 @@
     <div class="header-title">
         <h1>Bangkok Barberia RESPONSIVE</h1>
     </div>
-    <a href="pages/prueba.html" class="logo">    
+    <a href="/index.html" class="logo">    
         <img class="foto-logo" src="../img/logo.png" alt="">
     </a>
     <nav class="header-nav">
@@ -47,19 +47,19 @@
             <form class="form" action="#" method="post" enctype="application/x-www-form-urlencoded">
                 <div>
                     <label for="nombre">Nombre</label>
-                    <input id="text" name="nombre" placeholder="Ingresa tu nombre" required>
+                    <input class="form-control-lg" id="text" name="nombre" placeholder="Ingresa tu nombre" required>
                 </div>
                 <div>
                     <label for="apellido">Apellido</label>
-                    <input id="text" name="apellido" placeholder="Ingresa tu apellido" required>
+                    <input class="form-control-lg"id="text" name="apellido" placeholder="Ingresa tu apellido" required>
                 </div>
                 <div>
                     <label for="email">Email</label>
-                    <input email="email" name="email" placeholder="Ingresa tu Email" required>
+                    <input class="form-control-lg"email="email" name="email" placeholder="Ingresa tu Email" required>
                 </div>
                 <div>
                     <label for="mensaje"></label>
-                    <textarea name="mensaje" id="" cols="30" rows="10" placeholder="Dejanos tu mensaje:"></textarea>
+                    <textarea class="form-control-lg"name="mensaje" id="" cols="30" rows="10" placeholder="Dejanos tu mensaje:"></textarea>
 
                 </div>
                 <div>
