--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -25,7 +25,7 @@
         <div class="header-title">
             <h1>Bangkok Barberia RESPONSIVE</h1>
         </div>
-        <a href="pages/prueba.html" class="logo">    
+        <a href="/index.html" class="logo">    
             <img class="foto-logo" src="../img/logo.png" alt="">
         </a>
         <nav class="header-nav">
