--- a/pages/tendencias.html
+++ b/pages/tendencias.html
@@ -18,14 +18,25 @@
         <div class="header-title">
             <h1>Bangkok Barberia RESPONSIVE</h1>
         </div>
-        <a href="../index.html" class="logo">    
+        <a href="./index.html" class="logo">    
             <img class="foto-logo" src="../img/logo.png" alt="">
         </a>
         <nav class="header-nav">
             <ul class="header-list">
                 <li><a class="list-items links" href="../index.html">Inicio</a></li>
                 <li><a class="list-items links" href="../pages/sobre_nosotros.html">Sobre Nosotros</a></li>
-                <li><a class="list-items links" href="../pages/tendencias.html">Tendencias</a></li>
+                <li>
+                    <a class="list-items links nav-item dropdown nav-link dropdown-toggle" href="tendencias.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Tendencias</a>
+                        
+                      </a>
+                      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="#">Tendencias 2021</a></li>
+                        <li><a class="dropdown-item" href="#">Tendencias 2022</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="tendencias.html">Tendencias 2023</a></li>
+                      </ul>
+                
+                </li>
                 <li><a class="list-items links" href="../pages/servicios.html">Servicios</a></li>
                 <li><a class="list-items links" href="../pages/contacto.html">Contacto</a></li>
             </ul>
@@ -39,11 +50,11 @@
             <div class="row align-items-start">
             <div class="col-6">
                 High Fade 
-                <img class="padding bordes2 centro w-50 " src="../img/tendencia1.jpg" alt="High Fade">
+                <img class="padding bordes2 centro w-50 slogan" src="../img/tendencia1.jpg" alt="High Fade">
             </div>
             <div class="col-6">
                 Taper Fade
-                <img class="padding bordes2 w-50 centro img-fluid " src="../img/tendencia2.jpg" alt="Taper Fade">
+                <img class="padding bordes2 w-50 centro slogan img-fluid " src="../img/tendencia2.jpg" alt="Taper Fade">
             </div>
             </div>
             </div>
