--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Bangkok Barbería</title>
+        <title>Bangkok Barbería | Inicio</title>
+        <meta name="description" content="Únete a la tendencia de Barberia Bangkok, encontraras los mejores cortes y colores">
+        <meta name="robots" content="index,follow">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
         <link rel="stylesheet" href="./css/main.css">
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
         </style>
+        <link rel="icon" href="/img/favicon.png" type="image" sizes="32x32">
     </head>
 </head>
 <body>
     <header class="header">
+
         <div class="header-title">
             <h1>Bangkok Barberia RESPONSIVE</h1>
         </div>
