--- a/pages/sobre_nosotros.html
+++ b/pages/sobre_nosotros.html
@@ -29,8 +29,6 @@
                 <li><a class="list-items links" href="sobre_nosotros.html">Sobre Nosotros</a></li>
                 <li>
                     <a class="list-items links nav-item dropdown nav-link dropdown-toggle" href="tendencias.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Tendencias</a>
-                        
-                      </a>
                       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="#">Tendencias 2021</a></li>
                         <li><a class="dropdown-item" href="#">Tendencias 2022</a></li>
@@ -57,9 +55,10 @@
                     <p class=" centro">Un ambiente cómodo y seguro.
                 </p>
             </div>
+        
+            <p class="slogan font">Encontranos en Costa Rica 4177, CABA</p>
+            <iframe class=" col-12 bordes2" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.4988169493345!2d-58.423776684475385!3d-34.591545980462705!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc73644b8cdf02eb1!2zMzTCsDM1JzI5LjYiUyA1OMKwMjUnMTcuNyJX!5e0!3m2!1ses-419!2sar!4v1646674298946!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </section>
-        <p class="slogan font">Encontranos en Costa Rica 4177, CABA</p>
-        <iframe class="centro bordes2" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.4988169493345!2d-58.423776684475385!3d-34.591545980462705!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc73644b8cdf02eb1!2zMzTCsDM1JzI5LjYiUyA1OMKwMjUnMTcuNyJX!5e0!3m2!1ses-419!2sar!4v1646674298946!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </main>
     <footer>
         <div>
