--- a/pages/tendencias.html
+++ b/pages/tendencias.html
@@ -31,8 +31,6 @@
                 <li><a class="list-items links" href="../pages/sobre_nosotros.html">Sobre Nosotros</a></li>
                 <li>
                     <a class="list-items links nav-item dropdown nav-link dropdown-toggle" href="tendencias.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Tendencias</a>
-                        
-                      </a>
                       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="#">Tendencias 2021</a></li>
                         <li><a class="dropdown-item" href="#">Tendencias 2022</a></li>
@@ -52,11 +50,11 @@
         <h1 class="slogan font row centro">TENDENCIAS 2023</h1>
         <div class="container text-center">
             <div class="row align-items-start">
-            <div class="col-6">
+            <div class="col-12 col-md-6">
                 High Fade 
                 <img class="padding bordes2 centro w-50 slogan" src="../img/tendencia1.jpg" alt="High Fade">
             </div>
-            <div class="col-6">
+            <div class="col-12 col-md-6">
                 Taper Fade
                 <img class="padding bordes2 w-50 centro slogan img-fluid " src="../img/tendencia2.jpg" alt="Taper Fade">
             </div>
