--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -43,7 +43,7 @@
                 <ul class="header-list">
                     <li><a class="list-items links" href="/index.html">Inicio</a></li>
                     <li><a class="list-items links" href="sobre_nosotros.html">Sobre Nosotros</a></li>
-                    <li>
+                    <li class="nav-item dropdown">
                         <a class="list-items links nav-item dropdown nav-link dropdown-toggle" href="tendencias.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Tendencias</a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="#">Tendencias 2021</a></li>
