cambios en servicios.html

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -62,33 +62,35 @@
     </header>
     <main>
         <h1 class="slogan font">SERVICIOS</h1>
-        <table class="slogan2 font table table-light table-striped table-hover ">
-            <tr>
-                <th>SERVICIO</th>
-                <th>DESCRIPCIÓN</th>
-                <th>IMAGEN</th>
-            </tr>
-            <tr>
-                <td>CORTE</td>
-                <td>Nuestro equipo de profesionales podrá asesorarte y hacer lucir tu corte ideal. El pelo es el
-                    accesorio más importante que tenemos.</td>
-                <td><img src="../img/corte.png" alt="CORTE-IMAGEN"></td>
+        <div class="container ">
+            <table class="slogan2 font table table-light table-striped table-hover mx_auto">
+                <tr>
+                    <th>SERVICIO</th>
+                    <th>DESCRIPCIÓN</th>
+                    <th>IMAGEN</th>
+                </tr>
+                <tr>
+                    <td>CORTE</td>
+                    <td>Nuestro equipo de profesionales podrá asesorarte y hacer lucir tu corte ideal. El pelo es el
+                        accesorio más importante que tenemos.</td>
+                    <td><img src="../img/corte.png" alt="CORTE-IMAGEN"></td>
 
-            </tr>
-            <tr>
-                <td>BARBA</td>
-                <td>Afeitada tradicional o recorte de barba. Contamos con el servicio de toalla caliente.</td>
-                <td><img src="../img/barba.png" alt="BARBA-CORTE"></td>
-            </tr>
-            <tr>
-                <td>COLOR</td>
-                <td>Las tendencias y los tonos cambian. Animate vos también. Encontrar el tono justo para tu estilo es
-                    nuestro objetivo.</td>
-                <td><img src="../img/color.png" alt="COLOR-SERVICIO"></td>
-            </tr>
+                </tr>
+                <tr>
+                    <td>BARBA</td>
+                    <td>Afeitada tradicional o recorte de barba. Contamos con el servicio de toalla caliente.</td>
+                    <td><img src="../img/barba.png" alt="BARBA-CORTE"></td>
+                </tr>
+                <tr>
+                    <td>COLOR</td>
+                    <td>Las tendencias y los tonos cambian. Animate vos también. Encontrar el tono justo para tu estilo es
+                        nuestro objetivo.</td>
+                    <td><img src="../img/color.png" alt="COLOR-SERVICIO"></td>
+                </tr>
 
-        </table>
-    </main>
+            </table>
+        </div>
+        </main>
     <footer>
         <div>
             <p class="reserva bordes">
