zoom en las img

--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
 
                 <img class="foto-inicio3 foto-inicio2" src="img/inicio.png" alt="">
 
-                <img class="foto-inicio2" src="img/inicio4.jpg" alt="">
+                <img class="foto-inicio2 zoom" src="img/inicio4.jpg" alt="">
 
-                <img class="foto-inicio2" src="img/inicio3.jpg" alt="">
+                <img class="foto-inicio2 zoom" src="img/inicio3.jpg" alt="">
                 
-                <img class="foto-inicio2" src="img/inicio2.jpg" alt="">
+                <img class="foto-inicio2 zoom" src="img/inicio2.jpg" alt="">
                 
-                <img class="foto-inicio2" src="img/inicio1.jpg" alt="">
+                <img class="foto-inicio2 zoom" src="img/inicio1.jpg" alt="">
             </div>
         </section>    
     </main>
