--- a/pages/tendencias.html
+++ b/pages/tendencias.html
@@ -59,11 +59,11 @@
         <h1 class="slogan font row centro">TENDENCIAS 2023</h1>
         <div class="container text-center">
             <div class="row align-items-start">
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-6 zoom">
                 High Fade 
                 <img class="padding bordes2 centro w-50 slogan" src="../img/tendencia1.jpg" alt="High Fade">
             </div>
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-6 zoom">
                 Taper Fade
                 <img class="padding bordes2 w-50 centro slogan img-fluid " src="../img/tendencia2.jpg" alt="Taper Fade">
             </div>
